--- a/css/game.css
+++ b/css/game.css
@@ -1,88 +1,137 @@
 .container{
+  margin-top: 2%;
   display: flex;
   flex-wrap: nowrap;
+  font-family: 'Work Sans', sans-serif;
 }
 
-.navbar{
-  width: 100%;
-  height: 50px;
-  background-color: #0BB5FF;
+.topBar{
+  margin-top: -1em;
+  margin-left: -1em;
+  margin-right: -0.5em;
+  height: 45px;
+  border-bottom: 0.5px solid gray;
 }
 
-.navbar nav{
-  margin: 0 auto;
-}
-.navbar nav a{
-  text-decoration: none;
-  font-size: 1.1em;
-  color: black;
-  margin-left: 3%;
-  font-family: sans-serif;
-}
-#giveupBtn{
-  position: absolute;
-  top: 20px;
-  right: 15px;
-  color: black;
+.navBar{
+  font-family: 'Work Sans', sans-serif;
+  display: flex;
+  padding: 0 0;
+  list-style: none;
 }
 
-#giveupBtn img{
-  width: 20%;
-  height: 20%;
-  padding-right: 3px;
+.homeNavigator{
+  margin-left: 2%;
+  margin-top: 1%;
+  padding-right: 4px;
+  margin-right: auto;
+  border-right: 0.5px solid gray;
+}
+.howToPlay{
+  margin-right: 2%;
+  margin-top: 1%;
+  margin-left: auto;
 }
 
 .container .information{
   padding-left: 4%;
-  margin-top: 4%;
   width: 33.3%;
   left : 0;
 }
 .container .game{
   display: block;
-  margin-top: 4%;
   left:33.3%;
   width: 33.3%;
 }
 
 .game img{
   margin-left: 20%;
+  color: #0D77B7;
 }
 .container .alphabet{
   left:66.6%;
   width: 33.3%;
   margin-right: 4%;
   padding-left: 4%;
-  margin-top: 4%;
   display: flex;
   flex-wrap: wrap;
 }
 
 .container .alphabet button{
-  width:80px;
-  height: 40px;
+  display: block;
+  height: 50px;
+  width: 50px;
+  padding: 1px;
+  border-radius: 50px 50px 50px 50px;
+  border-color: transparent;
+  background: #0D77B7;
   margin: 1% 1% 1% 1%;
+
 }
 
-.cards{
+.cardContainer{
+  margin-top: 1%;
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
 }
 
-.cards div{
+
+.card{
+  border: 1px solid gray;
+  margin: 1% 1% 0 1%;
+  border-radius: 3% 3% 10% 3%;
+  width: 15%;
+  max-width: 15%;
+}
+.cardTop{
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-bottom: 1px dashed gray;
+}
+
+.info{
   display: block;
-  background: #0BB5FF;
+  height: 40px;
+  width: 40px;
+  padding: 1px;
+  border-radius: 50px 50px 50px 50px;
+  border-color: transparent;
+  background: #0D77B7;
+  pointer-events: none;
+  cursor: default;
+}
+
+.cardBottom{
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cardBottom label{
+  margin-top: 2%;
+}
+
+.cardBottom button{
+  width: 100%;
+  border-radius: 0 3px 15px 0;
+  background: #0D77B7;
+  border-color: transparent;
   margin-top: 3%;
-  margin-left: 2%;
-  margin-right: 2%;
+}
+.cardBottom button label{
+  color: #FFFFFF;
 }
 
 .footer{
   display: flex;
   justify-content: center;
   margin-top: 3%;
-  border-top: #0BB5FF;
 }
 .footer label{
   font-size: 0.7em;
