--- a/css/game.css
+++ b/css/game.css
@@ -230,19 +230,27 @@
     background-color: #fefefe;
     margin: auto;
     padding: 0;
-    display: block;
+    display: flex;
+    flex-direction : column;
     border: 1px solid #888;
     width: 80%;
 }
 
 .modalHeader {
-    padding: 2px 16px;
+    width:100%;
     align-self: center;
     background-color: #0D77B7;
     color: white;
+    display:flex;
+    justify-content:center;
 }
 .modalBody {
-    padding: 2px 16px;
-    display: block;
-    margin: 0 auto;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    display: flex;
+    flex-direction:column;
+    align-self: center;
+}
+.modalBody button {
+    margin-top:5%;
 }
